--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfólio de Davi Ribeiro - Desenvolvedor Fullstack. Projetos, habilidades e contato." />
+  <meta name="description"
+    content="Portfólio de Davi Ribeiro - Desenvolvedor Fullstack. Projetos, habilidades e contato." />
   <title>Davi Ribeiro - Software Developer</title>
   <link href="../dist/styles.css" rel="stylesheet" />
   <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/lucide@latest"></script>
   <style>
-    html { scroll-behavior: smooth; }
+    html {
+      scroll-behavior: smooth;
+    }
   </style>
 </head>
-<body class="bg-gray-900 text-gray-100 font-sans tracking-wide">
+
+<body class="bg-gray-900 text-gray-100 font-['Inter'] tracking-wide">
 
   <!-- Navbar -->
   <nav class="fixed w-full bg-gray-800/80 backdrop-blur-md z-50 shadow-lg">
@@ -28,7 +35,8 @@
   </nav>
 
   <!-- Hero -->
-  <section id="hero" class="h-screen flex flex-col justify-center items-center text-center px-6 relative bg-gradient-to-b from-gray-900 to-gray-950">
+  <section id="hero"
+    class="h-screen flex flex-col justify-center items-center text-center px-6 relative bg-gradient-to-b from-gray-900 to-gray-950">
     <div class="relative z-10 animate-fadeIn">
       <!-- Badge -->
       <div class="mb-6">
@@ -43,7 +51,8 @@
 
       <!-- Título -->
       <h1 class="text-4xl md:text-5xl font-extrabold mb-4">
-        Olá, eu sou <span class="bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">Davi Ribeiro</span>
+        Olá, eu sou <span class="bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">Davi
+          Ribeiro</span>
       </h1>
       <h2 class="text-xl md:text-2xl text-gray-400 mb-6">Desenvolvedor Fullstack</h2>
 
@@ -54,12 +63,19 @@
 
       <!-- Skills principais -->
       <div class="flex flex-wrap justify-center gap-2 mb-5">
-        <div class="px-3 py-1.5 hidden sm:block rounded-full bg-white/5 backdrop-blur-sm border border-white/10 text-xs sm:text-sm text-gray-300 hover:bg-white/10 transition-colors">Python</div>
-        <span class="px-3 py-1.5 hidden sm:block rounded-full bg-white/5 backdrop-blur-sm border border-white/10 text-xs sm:text-sm text-gray-300 hover:bg-white/10 transition-colors">SQL</span>
-        <span class="px-3 py-1.5 hidden sm:block rounded-full bg-white/5 backdrop-blur-sm border border-white/10 text-xs sm:text-sm text-gray-300 hover:bg-white/10 transition-colors">Node.js</span>
-        <span class="px-3 py-1.5 hidden sm:block rounded-full bg-white/5 backdrop-blur-sm border border-white/10 text-xs sm:text-sm text-gray-300 hover:bg-white/10 transition-colors">PHP</span>
-        <span class="px-3 py-1.5 hidden sm:block rounded-full bg-white/5 backdrop-blur-sm border border-white/10 text-xs sm:text-sm text-gray-300 hover:bg-white/10 transition-colors">Laravel</span>
-        <span class="px-3 py-1.5 hidden sm:block rounded-full bg-white/5 backdrop-blur-sm border border-white/10 text-xs sm:text-sm text-gray-300 hover:bg-white/10 transition-colors">Tailwind</span>
+        <div
+          class="px-3 py-1.5 hidden sm:block rounded-full bg-white/5 backdrop-blur-sm border border-white/10 text-xs sm:text-sm text-gray-300 hover:bg-white/10 transition-colors">
+          Python</div>
+        <span
+          class="px-3 py-1.5 hidden sm:block rounded-full bg-white/5 backdrop-blur-sm border border-white/10 text-xs sm:text-sm text-gray-300 hover:bg-white/10 transition-colors">SQL</span>
+        <span
+          class="px-3 py-1.5 hidden sm:block rounded-full bg-white/5 backdrop-blur-sm border border-white/10 text-xs sm:text-sm text-gray-300 hover:bg-white/10 transition-colors">Node.js</span>
+        <span
+          class="px-3 py-1.5 hidden sm:block rounded-full bg-white/5 backdrop-blur-sm border border-white/10 text-xs sm:text-sm text-gray-300 hover:bg-white/10 transition-colors">PHP</span>
+        <span
+          class="px-3 py-1.5 hidden sm:block rounded-full bg-white/5 backdrop-blur-sm border border-white/10 text-xs sm:text-sm text-gray-300 hover:bg-white/10 transition-colors">Laravel</span>
+        <span
+          class="px-3 py-1.5 hidden sm:block rounded-full bg-white/5 backdrop-blur-sm border border-white/10 text-xs sm:text-sm text-gray-300 hover:bg-white/10 transition-colors">Tailwind</span>
       </div>
 
       <!-- Botões -->
@@ -73,6 +89,17 @@
           📩 Contato
         </a>
       </div>
+    </div>
+    <!-- Bloco de ícones sociais -->
+    <div class="flex justify-center gap-4 mt-4">
+      <a href="https://github.com/DaviFRibeiro/" target="_blank"
+        class="px-3 py-3 rounded-lg bg-white/5 border border-white/10 hover:bg-white/10 transition shadow-lg">
+        <i data-lucide="github" class="w-6 h-6 text-gray-300"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/davi-ferreira-ribeiro-a49135204" target="_blank"
+        class="px-3 py-3 rounded-xl bg-white/5 border border-white/10 hover:bg-white/10 transition shadow-lg">
+        <i data-lucide="linkedin" class="w-6 h-6 text-gray-300"></i>
+      </a>
     </div>
   </section>
   <!-- Projetos -->
@@ -139,7 +166,8 @@
           Sempre em busca de aprender novas ferramentas e contribuir para projetos que impactem positivamente
           a vida das pessoas.
         </p>
-        <a href="#contato" class="bg-blue-600 px-6 py-3 rounded-lg hover:bg-blue-700 transition shadow-lg">Entre em contato</a>
+        <a href="#contato" class="bg-blue-600 px-6 py-3 rounded-lg hover:bg-blue-700 transition shadow-lg">Entre em
+          contato</a>
       </div>
     </div>
   </section>
@@ -162,9 +190,12 @@
     <h2 class="text-4xl font-bold mb-6">Contato</h2>
     <p class="mb-6 text-gray-300">Gostaria de conversar comigo? Envie uma mensagem!</p>
     <form class="max-w-lg mx-auto grid gap-4 text-left">
-      <input type="text" placeholder="Seu Nome" class="w-full p-3 rounded bg-gray-700 border border-gray-600 focus:ring-2 focus:ring-blue-500 outline-none">
-      <input type="email" placeholder="Seu e-mail" class="w-full p-3 rounded bg-gray-700 border border-gray-600 focus:ring-2 focus:ring-blue-500 outline-none">
-      <textarea placeholder="Sua mensagem" rows="5" class="w-full p-3 rounded bg-gray-700 border border-gray-600 focus:ring-2 focus:ring-blue-500 outline-none"></textarea>
+      <input type="text" placeholder="Seu Nome"
+        class="w-full p-3 rounded bg-gray-700 border border-gray-600 focus:ring-2 focus:ring-blue-500 outline-none">
+      <input type="email" placeholder="Seu e-mail"
+        class="w-full p-3 rounded bg-gray-700 border border-gray-600 focus:ring-2 focus:ring-blue-500 outline-none">
+      <textarea placeholder="Sua mensagem" rows="5"
+        class="w-full p-3 rounded bg-gray-700 border border-gray-600 focus:ring-2 focus:ring-blue-500 outline-none"></textarea>
       <button class="bg-blue-600 py-3 px-6 rounded hover:bg-blue-700 transition shadow-lg">Enviar</button>
     </form>
   </section>
@@ -187,5 +218,9 @@
       });
     });
   </script>
+  <script>
+    lucide.createIcons();
+  </script>
 </body>
+
 </html>
