--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="description"
     content="Portfólio de Davi Ribeiro - Desenvolvedor Fullstack. Projetos, habilidades e contato." />
   <title>Davi Ribeiro - Software Developer</title>
-  <link href="../dist/styles.css" rel="stylesheet" />
+  <link href="../dist/styles.css" rel="stylesheet">
   <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/lucide@latest"></script>
@@ -93,11 +93,11 @@
     <!-- Bloco de ícones sociais -->
     <div class="flex justify-center gap-4 mt-4">
       <a href="https://github.com/DaviFRibeiro/" target="_blank"
-        class="px-3 py-3 rounded-lg bg-white/5 border border-white/10 hover:bg-white/10 transition shadow-lg">
+        class="px-3 py-3 rounded-lg bg-white/5 border border-white/10 hover:bg-white/10 transition shadow-lg flex items-center justify-center">
         <i data-lucide="github" class="w-6 h-6 text-gray-300"></i>
       </a>
       <a href="https://www.linkedin.com/in/davi-ferreira-ribeiro-a49135204" target="_blank"
-        class="px-3 py-3 rounded-xl bg-white/5 border border-white/10 hover:bg-white/10 transition shadow-lg">
+        class="px-3 py-3 rounded-lg bg-white/5 border border-white/10 hover:bg-white/10 transition shadow-lg flex items-center justify-center">
         <i data-lucide="linkedin" class="w-6 h-6 text-gray-300"></i>
       </a>
     </div>
@@ -109,15 +109,15 @@
 
       <!-- Card Projeto -->
       <div class="bg-gray-800 rounded-xl shadow-lg overflow-hidden hover:scale-105 transition">
-        <img src="./assets/projeto1.png" alt="Projeto 1" class="w-full h-40 object-cover">
+        <img src="./assets/projeto1.jpg" alt="Projeto 1" class="w-full h-40 object-cover">
         <div class="p-6">
-          <h3 class="text-2xl font-semibold mb-2">Projeto 1</h3>
-          <p class="mb-4 text-gray-300">Breve descrição do projeto e seu impacto.</p>
+          <h3 class="text-2xl font-semibold mb-2">Currency Converter</h3>
+          <p class="mb-4 text-gray-300">Aplicativo em Python para monitoramento de câmbio, utilizando integração com APIs (AwesomeAPI) financeiras em tempo real, interface gráfica usando a biblioteca CustomTkinter e visualização interativa com matplotlib.</p>
           <div class="flex flex-wrap gap-2 mb-4">
             <span class="bg-green-600 px-2 py-1 rounded text-xs">Python</span>
-            <span class="bg-blue-600 px-2 py-1 rounded text-xs">API Rest</span>
+            <span class="bg-blue-600 px-2 py-1 rounded text-xs">AWESOMEAPI</span>
           </div>
-          <a href="#" target="_blank" class="text-blue-400 hover:underline">Ver Código</a>
+          <a href="https://github.com/DaviFRibeiro/Currency-converter" target="_blank" class="text-blue-400 hover:underline">Ver Código</a>
         </div>
       </div>
 
